Fix: Make Show All button parent container transparent in dark mode
- Added .css-y3xyp5-view to selector to target parent div
- Ensures entire button area has transparent background

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -127,6 +127,7 @@ html.canvalier-dark-mode .ToDoSidebarItem__Icon path {
 }
 
 /* Todo "Show All" button - transparent background */
+html.canvalier-dark-mode .css-y3xyp5-view,
 html.canvalier-dark-mode .css-sd7y4c-view-link {
   background-color: transparent !important;
   background: transparent !important;
